--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
-    <title>Moralis DAO</title>
+    <title>Launch Lab DAO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
